--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,15 @@
-{{ content }}
+<!DOCTYPE html>
+<html>
+{% include head.html %}
+
+<body>
+	{% include header.html %}
+	<main>
+		<article>
+			{{ content }}
+		</article>
+    <footer>Esto es el pie</footer>
+	</main>
+</body>
+
+</html>
