--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <body>
 	{% include header.html %}
 	{% include slider.html %}
-    <footer>Esto es el pie</footer>
+	{% include footer.html %}
 </body>
 
 </html>
