--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,14 @@
 
 <body>
 	{% include header.html %}
-	{% include slider.html %}
+	<!--{% include slider.html %}
 	{% include caracteristicas.html %}
 	{% include newsletter.html %}
 	{% include enlaces-imagen.html %}
 	{% include carousel.html %}
 	{% include rrss.html %}
 	{% include precios.html %}
-	{% include formulario.html %}
+	{% include formulario.html %} -->
 	{% include footer.html %}
 </body>
 
