--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 	{% include rrss.html %}
 	{% include precios.html %}
 	{% include formulario.html %} -->
+	ABCD
 	{% include footer.html %}
 </body>
 
