--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,13 @@
 <body>
 	{% include header.html %}
 	{% include_relative _layouts/slider.html %}
-	{% include carousel.html %}
+	{% include_relative _layouts/caracteristicas.html %}
+	{% include_relative _layouts/newsletter.html %}
+	{% include_relative _layouts/enlaces-imagen.html %}
+	{% include_relative _layouts/carousel.html %}
+	{% include_relative _layouts/rrss.html %}
+	{% include_relative _layouts/precios.html %}
+	{% include_relative _layouts/formulario.html %}
 
 	ABCD
 	{% include footer.html %}
