--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,12 @@
 <div class="container">
-	<nav>
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Portfolio</a></li>
-			<li><a href="#">Blog</a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">Contact</a></li>
+	<nav class="navbar navbar-expand-sm bg-light">
+		<a class="navbar-brand" href="#">Logo</a>
+		<ul class="navbar-nav">
+			<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+			<li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
+			<li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+			<li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+			<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
 		</ul>
 	</nav>
 </div>
