--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,25 @@
 <div class="container">
-	<nav class="navbar navbar-expand-sm bg-light">
-		<a class="navbar-brand" href="#">Logo</a>
-		<ul class="navbar-nav">
+	<nav class="navbar navbar-light">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+		<a class="navbar-brand" href="/">Siweb</a>
+	</div>
+	<div id="navbar" class="navbar-collapse collapse">
+		<ul class="nav navbar-nav navbar-right ">
 			<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
 			<li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
 			<li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
 			<li class="nav-item"><a class="nav-link" href="#">Services</a></li>
 			<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+			
 		</ul>
-	</nav>
+	</div>
+</nav>
 </div>
 <header>
 	<h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
