--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,18 @@
 <div class="container">
 	<nav class="navbar navbar-expand-sm bg-light">
 		<a class="navbar-brand" href="#">Logo</a>
-		<ul class="navbar-nav">
-			<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-		</ul>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="collapsibleNavbar">
+			<ul class="navbar-nav">
+				<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+			</ul>
+		</div>
 	</nav>
 </div>
 <header>
