--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,11 @@
 <div class="container">
 	<nav class="navbar navbar-expand-sm bg-light">
-		<a class="navbar-brand" href="#">Logo</a>
+		<a class="navbar-brand" href="#">Rodrigo</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 			<span class="navbar-toggler-icon"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 			<ul class="navbar-nav">
