--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<nav class="navbar navbar-expand-sm bg-light">
+	<nav class="navbar navbar-expand-sm navbar-light">
 		<a class="navbar-brand" href="#">Rodrigo</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 			<span class="navbar-toggler-icon"></span>
