--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 
 <body>
 	{% include header.html %}
+	{{ content }}
 	{% include_relative _layouts/slider.html %}
 	{% include_relative _layouts/caracteristicas.html %}
 	{% include_relative _layouts/newsletter.html %}
